tests/compile-fail/integration_suite__integration__general__string_func.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `string`
   ┌─ <input>:25:9
   │
25 │         string foo() { return "hi"; }
   │         ^^^^^^ unexpected token
   │
   = 
     Expected one of "#", ",", "]", "anim", "const", "ecli", "entry", "float", "inline", "int", "meta", "script", "sub", "timeline", "void" or "}"


